--- a/examples/package.json
+++ b/examples/package.json
@@ -6,8 +6,8 @@
 
   "scripts": {
 
-    "build" : "elm-make Main.elm --output=elm-main.js",
-    "live" : "elm-live Main.elm --output=elm-main.js --open --pushstate --port=8008",
+    "build" : "elm-make Main.elm --output=main.js",
+    "live" : "elm-live Main.elm --output=main.js --debug --open --pushstate --port=8008",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
 
