--- a/examples/package.json
+++ b/examples/package.json
@@ -7,7 +7,7 @@
   "scripts": {
 
     "build" : "elm-make Main.elm --output=main.js",
-    "live" : "elm-live Main.elm --output=main.js --debug --open --pushstate --port=8008",
+    "live" : "elm-live Main.elm --output=main.js --open --pushstate --port=8008",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
 
